--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Chat!!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
     <script defer src="app.js"></script>
     </head>
 <body>
-    <img class="grave" src="/resource/svg/grave.svg">
+    <img class="grave" src="./resource/svg/grave.svg">
     <span>Gray</span>
     <span class="grayDeadPool">0</span>
     <span>Box</span>
